--- a/style.css
+++ b/style.css
@@ -2,9 +2,25 @@ body, html {
     height: 4000px;
 }
 
-#vertical-left, #vertical-right {
-    width: 300px;
-    left: 6%;
+.horizontal-scroll-band {
+  position: fixed;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+}
+
+.horizontal-scroll-band div {
+  height: 100%;
+}
+
+.horizontal-scroll-band div img {
+  height: 100%;
+  position: relative;
+}
+
+/*#vertical-left, #vertical-right {
+    width: 20vw;
+    left: 5vw;
     background-color: red;
     position: fixed;
     top: 0;
@@ -14,20 +30,20 @@ body, html {
 
 #vertical-right {
   left: auto;
-  right: 6%;
+  right: 5vw;
 }
 
 #vertical-left div, #vertical-right div{
-  width: 300px;
-  height: 4000px;
+  width: 100%;
+  height: 1000vw;
   background-image: url("tree.jpg");
-  background-size: 300px 300px;
+  background-size: 100% 300px;
   background-repeat: repeat-y;
 }
 
 #horizontal-top, #horizontal-bottom {
-  height: 300px;
-  top: 6%;
+  height: 16vw;
+  top: 5vw;
   background-color: blue;
   position: fixed;
   left: 0;
@@ -35,19 +51,19 @@ body, html {
   overflow-x: hidden;
 }
 
-#horizontal-top div {
-  width: 6000px;
-  height: 300px;
+#horizontal-top div, #horizontal-bottom div {
+  width: 1000vw;
+  height: 100%;
   background-image: url("tree.jpg");
-  background-size: 300px 300px;
+  background-size: 300px 100%;
   background-repeat: repeat-x;
 }
 
 #horizontal-bottom {
   top: auto;
-  bottom: 6%;
+  bottom: 5vw;
 }
 
-/*#footer {
-  height:
+#footer {
+  height: 300px;
 }*/
